--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- sets favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="assets/images/android-chrome-192x192.png">
+    <!-- style sheets -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:100,200,300,700" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/style.css" />
     <title>Supersonic Weather Planner</title>
 </head>
+
 <body>
+    <nav class="header">
+        <h1><i class="fas fa-cloud-sun-rain "></i><span style="font-weight:100;"> Weather</span><span style="font-weight:700;"> Dashboard</span></h1>
+    </nav>
     
 </body>
 </html>
