--- a/index.html
+++ b/index.html
@@ -21,5 +21,26 @@
         <h1><i class="fas fa-cloud-sun-rain "></i><span style="font-weight:100;"> Weather</span><span style="font-weight:700;"> Dashboard</span></h1>
     </nav>
     
+    <div class="container-fluid main-div">
+
+        <div class="row">
+            <div id="search-box" class="col-lg-3 col-md-12 col-sm-12">
+                <h2>Search for a City:</h2>
+
+                <div class="input-group mb-3">
+                    <form id="search-form" class="form-inline">
+                        <input id="search-input" type="text" class="form-control">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" id="search-button"><i class="fas fa-search"></i></button>
+                        </div>
+                    </form>
+                </div>
+
+
+                
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
