--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <!-- sets favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/android-chrome-192x192.png">
+
     <!-- style sheets -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
@@ -17,12 +19,16 @@
 </head>
 
 <body>
+
+<!-- header -->
     <nav class="header">
         <h1><i class="fas fa-cloud-sun-rain "></i><span style="font-weight:100;"> Weather</span><span style="font-weight:700;"> Dashboard</span></h1>
     </nav>
-    
+
+<!-- main body --> 
     <div class="container-fluid main-div">
 
+<!-- city search box -->
         <div class="row">
             <div id="search-box" class="col-lg-3 col-md-12 col-sm-12">
                 <h2>Search for a City:</h2>
@@ -36,11 +42,59 @@
                     </form>
                 </div>
 
+<!-- searched cities -->
+                <div id = "cities">
+                    <ul class="list-group" id="list-group">
+                    </ul>
+                </div>
 
-                
+<!-- forecast container -->
+                <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12">
+
+<!-- current city searched weather -->
+                    <div id="city-box">
+                    </div>
+<!--  five day forecast -->
+                    <div id="five-day">
+                        <h3>Five Day Forecast</h3>
+                        <div class="five-day-row">
+<!-- weather cards -->
+                            <div class="col-1"></div>
+                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                                <div class="card">
+                                    <div id="day0" class="card-body"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                                <div class="card">
+                                    <div id="day1" class="card-body"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                                <div class="card">
+                                    <div id="day2" class="card-body"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                                <div class="card">
+                                    <div id="day3" class="card-body"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                                <div class="card">
+                                    <div id="day4" class="card-body"></div>
+                                </div>
+                            </div>
+                            <div class="col-1"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
-
+    <footer>
+        <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
+    </footer>
 </body>
 </html>
