adds weather API hook

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- style sheets -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:100,200,300,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:100,200,300,700" rel="stylesheet"> -->
         <link rel="stylesheet" href="assets/css/style.css" />
     <title>Supersonic Weather Planner</title>
 </head>
@@ -96,5 +96,8 @@
     <footer>
         <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
     </footer>
+<!-- adds scripts -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="/assets/js/script.js"></script>
 </body>
 </html>
