--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:100,200,300,700" rel="stylesheet"> -->
         <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Supersonic Weather Planner</title>
+
+<!-- adds jquery -->
+        <!-- <script src="jquery-3.5.1.min.js"></script> -->
+            <title>Supersonic Weather Planner</title>
 </head>
 
 <body>
@@ -30,7 +33,7 @@
 
 <!-- city search box -->
         <div class="row">
-            <div id="search-box" class="col-lg-3 col-md-12 col-sm-12">
+            <div id="search-box" class="col-lg-3 col-md-12 col-sm-12 my-3">
                 <h2>Search for a City:</h2>
 
                 <div class="input-group mb-3">
