--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <!-- style sheets -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:100,200,300,700" rel="stylesheet"> -->
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css" />
 
-<!-- adds jquery -->
-        <!-- <script src="jquery-3.5.1.min.js"></script> -->
-            <title>Supersonic Weather Planner</title>
+        <title>Supersonic Weather Planner</title>
 </head>
 
 <body>
@@ -46,7 +44,7 @@
                 </div>
 
 <!-- searched cities -->
-                <div id = "cities">
+                <div id="cities">
                     <ul class="list-group" id="list-group">
                     </ul>
                 </div>
@@ -58,9 +56,10 @@
                     <div id="city-box">
                     </div>
 <!--  five day forecast -->
-                    <div id="five-day">
+                    <div id="five-day" class="my-3">
                         <h3>Five Day Forecast</h3>
                         <div class="five-day-row">
+                            <div class="row">
 <!-- weather cards -->
                             <div class="col-1"></div>
                             <div class="col-lg-2 col-md-12 col-sm-12 text-center">
@@ -95,8 +94,7 @@
                 </div>                
             </div>
         </div>
-    </div>
-    <footer>
+    <footer class="header">
         <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
     </footer>
 <!-- adds scripts -->
