--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                     <ul class="list-group" id="list-group">
                     </ul>
                 </div>
+            </div>
 
 <!-- forecast container -->
-                <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12">
+                <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12 my-3">
 
 <!-- current city searched weather -->
                     <div id="city-box">
