adds README info

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                 </div>
 
 <!-- searched cities -->
-                <div id="cities">
+                <div id="cities" class=my-3>
                     <ul class="list-group" id="list-group">
                     </ul>
                 </div>
+                <button class="btn btn-outline-secondary" type="button" id="resetButton">Reset Cities</button>
             </div>
 
 <!-- forecast container -->
