--- a/index.html
+++ b/index.html
@@ -1,106 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- sets favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="assets/images/android-chrome-192x192.png">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="assets/images/android-chrome-192x192.png"
+    />
 
     <!-- style sheets -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-        <title>Supersonic Weather Planner</title>
-</head>
+    <title>Supersonic Weather Planner</title>
+  </head>
 
-<body>
-
-<!-- header -->
+  <body>
+    <!-- header -->
     <nav class="header">
-        <h1><i class="fas fa-cloud-sun-rain "></i><span style="font-weight:100;"> Weather</span><span style="font-weight:700;"> Dashboard</span></h1>
+      <h1>
+        <i class="fas fa-cloud-sun-rain"></i
+        ><span style="font-weight: 100"> Weather</span
+        ><span style="font-weight: 700"> Dashboard</span>
+      </h1>
     </nav>
 
-<!-- main body --> 
-    <div class="container-fluid main-div">
-
-<!-- city search box -->
-        <div class="row">
-            <div id="search-box" class="col-lg-3 col-md-12 col-sm-12 my-3">
-                <h2>Search for a City:</h2>
-
-                <div class="input-group mb-3">
-                    <form id="search-form" class="form-inline">
-                        <input id="search-input" type="text" class="form-control">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button" id="search-button"><i class="fas fa-search"></i></button>
-                        </div>
-                    </form>
-                </div>
-
-<!-- searched cities -->
-                <div id="cities" class=my-3>
-                    <ul class="list-group" id="list-group">
-                    </ul>
-                </div>
-                <button class="btn btn-outline-secondary" type="button" id="resetButton">Reset Cities</button>
+    <!-- main body -->
+    <main class="container d-flex flex-column">
+      <!-- city search box -->
+      <div class="row">
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h2>Search for a City:</h2>
             </div>
+            <form id="city-form" class="user-form card-body flex-column">
+              <input id="search-input" type="text" class="form-control" />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="search-button"
+                >
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </form>
+          </div>
 
-<!-- forecast container -->
-                <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12 my-3">
-
-<!-- current city searched weather -->
-                    <div id="city-box">
-                    </div>
-<!--  five day forecast -->
-                    <div id="five-day" class="my-3">
-                        <h3>Five Day Forecast</h3>
-                        <div class="five-day-row">
-                            <div class="row">
-<!-- weather cards -->
-                            <div class="col-1"></div>
-                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                                <div class="card">
-                                    <div id="day0" class="card-body"></div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                                <div class="card">
-                                    <div id="day1" class="card-body"></div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                                <div class="card">
-                                    <div id="day2" class="card-body"></div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                                <div class="card">
-                                    <div id="day3" class="card-body"></div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                                <div class="card">
-                                    <div id="day4" class="card-body"></div>
-                                </div>
-                            </div>
-                            <div class="col-1"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>                
-            </div>
+          <!-- searched cities -->
+          <div id="cities" class="my-3">
+            <ul class="list-group" id="list-group"></ul>
+          </div>
+          <button
+            class="btn btn-outline-secondary"
+            type="button"
+            id="resetButton"
+          >
+            Reset Cities
+          </button>
         </div>
+
+        <!-- forecast container -->
+        <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12 my-3">
+          <!-- current city searched weather -->
+          <div id="city-box"></div>
+          <!--  five day forecast -->
+          <div id="five-day" class="my-3">
+            <h3>Five Day Forecast</h3>
+            <div class="five-day-row">
+              <div class="row">
+                <!-- weather cards -->
+                <div class="col-1"></div>
+                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                  <div class="card">
+                    <div id="day0" class="card-body"></div>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                  <div class="card">
+                    <div id="day1" class="card-body"></div>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                  <div class="card">
+                    <div id="day2" class="card-body"></div>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                  <div class="card">
+                    <div id="day3" class="card-body"></div>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
+                  <div class="card">
+                    <div id="day4" class="card-body"></div>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="header">
-        <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
+      <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
     </footer>
-<!-- adds scripts -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="/assets/js/script.js"></script>
-</body>
+    <!-- adds scripts -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="/assets/js/script.js"></script>
+  </body>
 </html>
