--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <!-- style sheets -->
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link
@@ -34,13 +38,14 @@
 
   <body>
     <!-- header -->
-    <nav class="header">
+    <header class="p-3 m-3 text-center header">
       <h1>
         <i class="fas fa-cloud-sun-rain"></i
         ><span style="font-weight: 100"> Weather</span
         ><span style="font-weight: 700"> Dashboard</span>
       </h1>
-    </nav>
+      <p id="currentDay"></p>
+    </header>
 
     <!-- main body -->
     <main class="container d-flex flex-column">
@@ -52,72 +57,32 @@
               <h2>Search for a City:</h2>
             </div>
             <form id="city-form" class="user-form card-body flex-column">
-              <input id="search-input" type="text" class="form-control" />
-              <div class="input-group-append">
-                <button
-                  class="btn btn-outline-secondary"
-                  type="button"
-                  id="search-button"
-                >
-                  <i class="fas fa-search"></i>
-                </button>
-              </div>
+              <label for="location" class="form-label">Location</label>
+              <input
+                name="location"
+                id="location"
+                type="text"
+                autofocus="true"
+                class="form-input"
+              />
+              <i class="fas fa-search"></i>
+              <button type="submit" class="btn bg-alert">
+                Search Location
+              </button>
             </form>
           </div>
 
           <!-- searched cities -->
-          <div id="cities" class="my-3">
-            <ul class="list-group" id="list-group"></ul>
-          </div>
-          <button
-            class="btn btn-outline-secondary"
-            type="button"
-            id="resetButton"
-          >
-            Reset Cities
-          </button>
+          <div id="previous-cities"></div>
         </div>
 
         <!-- forecast container -->
-        <div id="weather-forecast" class="col-lg-9 col-md-12 col-sm-12 my-3">
-          <!-- current city searched weather -->
-          <div id="city-box"></div>
-          <!--  five day forecast -->
-          <div id="five-day" class="my-3">
-            <h3>Five Day Forecast</h3>
-            <div class="five-day-row">
-              <div class="row">
-                <!-- weather cards -->
-                <div class="col-1"></div>
-                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                  <div class="card">
-                    <div id="day0" class="card-body"></div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                  <div class="card">
-                    <div id="day1" class="card-body"></div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                  <div class="card">
-                    <div id="day2" class="card-body"></div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                  <div class="card">
-                    <div id="day3" class="card-body"></div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-md-12 col-sm-12 text-center">
-                  <div class="card">
-                    <div id="day4" class="card-body"></div>
-                  </div>
-                </div>
-                <div class="col-1"></div>
-              </div>
-            </div>
-          </div>
+        <div class="col-12 col-lg-8 p-3 d-flex flex-column text-center mb-3">
+          <div
+            class="mb-3 d-flex flex-column align-items-center"
+            id="today"
+          ></div>
+          <div class="mt-3 bg-info" id="forecast"></div>
         </div>
       </div>
     </main>
@@ -125,6 +90,7 @@
       <p>Made with <i class="fas fa-coffee"></i> by TennCreekBridges</p>
     </footer>
     <!-- adds scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="/assets/js/script.js"></script>
   </body>
